# jdjump

./: .gitignore  README.md  releases.md  setup.cfg
jdjump/: jd.py  jdfunc
tests/: jumping.py
