[metadata]
name = jdjump
version = 0.0.1
description='jdjump - the directory jumper'

[options.packages.find]
where = .

[options]
packages = find:
# packagae_data = var/**/*
include_package_data = True
install_requires =
package_dir =
    = .

[options.package_data]
jdjump = 
    jdfunc

[options.entry_points]
console_scripts =
    _jd = jdjump.jd:main
    jd = jdjump.jd:main

[bdist_wheel]
universal=1
